--- a/App/src/main/resources/views/registration.fxml
+++ b/App/src/main/resources/views/registration.fxml
@@ -12,13 +12,29 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="software.controller.RegistrationController">
   <children>
     <Pane layoutX="0.0" layoutY="0.0" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: WHITE;">
       <children>
-        <Button fx:id="test" layoutX="156.0" layoutY="185.0" mnemonicParsing="false" onAction="#test" prefHeight="30.9609375" prefWidth="89.0" text="Button" />
+        <Button id="test" fx:id="registration" layoutX="62.0" layoutY="210.0" mnemonicParsing="false" onAction="#registration" prefHeight="30.9609375" prefWidth="89.0" text="Regisztráció" />
+        <Label layoutX="73.0" layoutY="88.0" minHeight="17.951171875" prefHeight="17.951171875" prefWidth="110.0" text="Felhasználónév">
+          <font>
+            <Font size="15.0" fx:id="x1" />
+          </font>
+        </Label>
+        <Label font="$x1" layoutX="73.0" layoutY="146.0" minHeight="17.951171875" prefHeight="17.951171875" prefWidth="110.0" text="Jelszó" />
+        <Label font="$x1" layoutX="73.0" layoutY="176.0" minHeight="17.951171875" prefHeight="17.951171875" prefWidth="110.0" text="Jelszó(újra)" />
+        <Label font="$x1" layoutX="73.0" layoutY="115.0" minHeight="17.951171875" prefHeight="17.951171875" prefWidth="110.0" text="email" />
+        <TextField fx:id="username" layoutX="200.0" layoutY="84.0" prefWidth="142.0" />
+        <TextField fx:id="email" layoutX="200.0" layoutY="115.0" prefWidth="142.0" />
+        <PasswordField fx:id="password" layoutX="200.0" layoutY="146.0" prefWidth="142.0" />
+        <PasswordField fx:id="repassword" layoutX="200.0" layoutY="178.0" prefWidth="142.0" />
+        <Button id="test" fx:id="gologin" layoutX="62.0" layoutY="259.0" mnemonicParsing="false" onAction="#goLogin" prefHeight="30.9609375" prefWidth="152.0" text="Tovább bejelentkezésre" />
+        <Label fx:id="error" alignment="CENTER" layoutX="191.0" layoutY="210.0" prefWidth="160.0" text="" textFill="RED" />
+        <Label fx:id="sucess" alignment="CENTER" font="$x1" layoutX="200.0" layoutY="206.0" prefWidth="160.0" text="" textFill="#10cc00" />
       </children>
     </Pane>
   </children>
