--- a/App/src/main/resources/views/login.fxml
+++ b/App/src/main/resources/views/login.fxml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="software.controller.LoginController">
+<AnchorPane fx:id="login" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="software.controller.LoginController">
   <children>
-    <Button fx:id="test" layoutX="172.0" layoutY="180.0" mnemonicParsing="false" onAction="#test" text="Button" />
+    <Button fx:id="singin" layoutX="146.0" layoutY="245.0" mnemonicParsing="false" onAction="#test" text="Bejelentkezés" />
+      <TextField fx:id="username" layoutX="200.0" layoutY="135.0" />
+      <TextField fx:id="password" layoutX="200.0" layoutY="180.0" />
+      <Label layoutX="76.0" layoutY="135.0" prefHeight="26.0" prefWidth="116.0" text="Felhasználónév:" textAlignment="RIGHT" />
+      <Label layoutX="141.0" layoutY="180.0" prefHeight="26.0" prefWidth="47.0" text="Jelszó:" textAlignment="RIGHT" />
+      <Button fx:id="signup" layoutX="146.0" layoutY="290.0" mnemonicParsing="false" onAction="#test" prefHeight="26.0" prefWidth="109.0" text="Regisztráció" />
+      <Label layoutX="97.0" layoutY="62.0" prefHeight="35.0" prefWidth="208.0" text="Bejelentkezés" textAlignment="RIGHT">
+         <font>
+            <Font size="29.0" />
+         </font>
+      </Label>
   </children>
 </AnchorPane>
