--- a/App/src/main/resources/views/login.fxml
+++ b/App/src/main/resources/views/login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -10,7 +11,6 @@
   <children>
     <Button fx:id="singin" layoutX="146.0" layoutY="245.0" mnemonicParsing="false" onAction="#test" text="Bejelentkezés" />
       <TextField fx:id="username" layoutX="200.0" layoutY="135.0" />
-      <TextField fx:id="password" layoutX="200.0" layoutY="180.0" />
       <Label layoutX="76.0" layoutY="135.0" prefHeight="26.0" prefWidth="116.0" text="Felhasználónév:" textAlignment="RIGHT" />
       <Label layoutX="141.0" layoutY="180.0" prefHeight="26.0" prefWidth="47.0" text="Jelszó:" textAlignment="RIGHT" />
       <Button fx:id="signup" layoutX="146.0" layoutY="290.0" mnemonicParsing="false" onAction="#goRegistration" prefHeight="26.0" prefWidth="109.0" text="Regisztráció" />
@@ -19,5 +19,6 @@
             <Font size="29.0" />
          </font>
       </Label>
+      <PasswordField fx:id="password" layoutX="200.0" layoutY="180.0" />
   </children>
 </AnchorPane>
