--- a/App/src/main/resources/views/LearnPage.fxml
+++ b/App/src/main/resources/views/LearnPage.fxml
@@ -5,12 +5,13 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.LearnPage">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.LearnPage">
    <children>
       <Button fx:id="backButton" layoutX="255.0" layoutY="334.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Vissza" />
-      <TextField fx:id="answerWord" layoutX="226.0" layoutY="134.0" />
+      <TextField fx:id="answerWord" layoutX="215.0" layoutY="131.0" />
       <Label layoutX="282.0" layoutY="103.0" text="Válasz:" />
       <Label fx:id="questionWord" layoutX="212.0" layoutY="65.0" prefHeight="25.0" prefWidth="176.0" text="***********************************************" />
-      <Label fx:id="correctWord" layoutX="203.0" layoutY="184.0" prefHeight="33.0" prefWidth="196.0" text="*************************************************************************************" />
+      <Label fx:id="correctWord" layoutX="208.0" layoutY="264.0" prefHeight="33.0" prefWidth="196.0" text="*************************************************************************************" visible="false" />
+      <Button fx:id="checkButton" layoutX="254.0" layoutY="206.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Ellenőriz" />
    </children>
 </AnchorPane>
