--- a/App/src/main/resources/views/WordsPage.fxml
+++ b/App/src/main/resources/views/WordsPage.fxml
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="software.controller.WordsController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="software.controller.WordsController">
   <children>
-    <Button id="addButton" fx:id="addWord" layoutX="136.0" layoutY="119.0" mnemonicParsing="false" onAction="#setAddWordClick" text="Szó hozzáadása" />
-    <Button fx:id="deleteWord" layoutX="118.0" layoutY="210.0" mnemonicParsing="false" onAction="#setDeleteWordClick" prefHeight="25.0" prefWidth="136.0" text="Szó törlése" />
-    <Button fx:id="goBackButton" layoutX="161.0" layoutY="300.0" mnemonicParsing="false" onAction="#setGoBackButtonClick" text="Vissza" />
+    <Button id="addButton" fx:id="addWord" layoutX="115.0" layoutY="143.0" mnemonicParsing="false" onAction="#setAddWordClick" text="Szó hozzáadása" />
+    <Button fx:id="deleteWord" layoutX="108.0" layoutY="200.0" mnemonicParsing="false" onAction="#setDeleteWordClick" prefHeight="25.0" prefWidth="136.0" text="Szó törlése" />
+    <Button fx:id="goBackButton" layoutX="147.0" layoutY="258.0" mnemonicParsing="false" onAction="#setGoBackButtonClick" text="Vissza" />
     <TableView fx:id="wordslist" layoutX="359.0" layoutY="3.0" prefHeight="332.0" prefWidth="228.0">
       <columns>
-        <TableColumn id="hunwords" prefWidth="116.0" text="Magyar" fx:id="hun" />
-        <TableColumn prefWidth="111.0" text="Angol" fx:id="eng" />
+        <TableColumn id="hunwords" fx:id="hun" prefWidth="116.0" text="Magyar" />
+        <TableColumn fx:id="eng" prefWidth="111.0" text="Angol" />
       </columns>
     </TableView>
-    <TextField fx:id="hunword" layoutX="29.0" layoutY="84.0" />
-    <TextField id="engword" fx:id="endword" layoutX="207.0" layoutY="84.0" />
-    <Label layoutX="71.0" layoutY="61.0" text="Magyar szó:" />
-    <Label layoutX="254.0" layoutY="61.0" text="Angol szó:" />
+    <TextField fx:id="hunword" layoutX="5.0" layoutY="84.0" />
+    <TextField id="engword" fx:id="endword" layoutX="185.0" layoutY="84.0" />
+    <Label layoutX="51.0" layoutY="61.0" text="Magyar szó:" />
+    <Label layoutX="237.0" layoutY="61.0" text="Angol szó:" />
   </children>
 </AnchorPane>
