--- a/App/src/main/resources/views/login.fxml
+++ b/App/src/main/resources/views/login.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="login" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="software.controller.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="software.controller.LoginController">
   <children>
     <Button fx:id="singin" layoutX="146.0" layoutY="245.0" mnemonicParsing="false" onAction="#test" text="Bejelentkezés" />
       <TextField fx:id="username" layoutX="200.0" layoutY="135.0" />
