--- a/App/src/main/resources/views/LearnPage.fxml
+++ b/App/src/main/resources/views/LearnPage.fxml
@@ -7,11 +7,12 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="software.controller.LearnPageController">
    <children>
-      <Button fx:id="backButton" layoutX="255.0" layoutY="334.0" mnemonicParsing="false" onAction="#goMenu" prefHeight="25.0" prefWidth="92.0" text="Vissza" />
-      <TextField fx:id="answerWord" layoutX="215.0" layoutY="131.0" />
-      <Label layoutX="282.0" layoutY="103.0" text="Válasz:" />
-      <Label fx:id="questionWord" layoutX="212.0" layoutY="65.0" prefHeight="25.0" prefWidth="176.0" text="***********************************************" />
-      <Label fx:id="correctWord" layoutX="208.0" layoutY="264.0" prefHeight="33.0" prefWidth="196.0" text="*************************************************************************************" visible="false" />
-      <Button fx:id="checkButton" layoutX="254.0" layoutY="206.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Ellenőriz" />
+      <Button fx:id="backButton" layoutX="237.0" layoutY="335.0" mnemonicParsing="false" onAction="#goMenu" prefHeight="25.0" prefWidth="92.0" text="Vissza" />
+      <TextField fx:id="answerWord" alignment="CENTER" layoutX="197.0" layoutY="174.0" />
+      <Label fx:id="message" layoutX="259.0" layoutY="133.0" text="Válasz:" />
+      <Label fx:id="questionWord" alignment="CENTER" layoutX="195.0" layoutY="87.0" prefHeight="25.0" prefWidth="176.0" textAlignment="CENTER" />
+      <Label fx:id="correctWord" alignment="CENTER" layoutX="102.0" layoutY="277.0" prefHeight="33.0" prefWidth="361.0" textAlignment="CENTER" />
+      <Button fx:id="checkButton" layoutX="237.0" layoutY="226.0" mnemonicParsing="false" onAction="#goCheck" prefHeight="25.0" prefWidth="92.0" text="Ellenőriz" />
+      <Label fx:id="countWordsMessage" alignment="CENTER" layoutX="151.0" layoutY="51.0" prefHeight="16.0" prefWidth="264.0" textAlignment="CENTER" />
    </children>
 </AnchorPane>
