--- a/App/src/main/resources/views/WordsPage.fxml
+++ b/App/src/main/resources/views/WordsPage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane  prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="software.controller.WordsController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="software.controller.WordsController">
   <children>
     <Button id="addButton" fx:id="addWord" layoutX="115.0" layoutY="143.0" mnemonicParsing="false" onAction="#setAddWordClick" text="Szó hozzáadása" />
     <Button fx:id="deleteWord" layoutX="108.0" layoutY="200.0" mnemonicParsing="false" onAction="#setDeleteWordClick" prefHeight="25.0" prefWidth="136.0" text="Szó törlése" />
@@ -22,5 +22,6 @@
     <TextField id="engword" fx:id="endword" layoutX="185.0" layoutY="84.0" />
     <Label layoutX="51.0" layoutY="61.0" text="Magyar szó:" />
     <Label layoutX="237.0" layoutY="61.0" text="Angol szó:" />
+      <Label fx:id="countWordsMess" alignment="CENTER" layoutX="12.0" layoutY="34.0" prefHeight="16.0" prefWidth="329.0" textAlignment="CENTER" />
   </children>
 </AnchorPane>
